# jinja-coverage

./: .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  tag.yml
jinja_coverage/: __init__.py  collector.py  instrument.py  plugin.py  reporter.py
tests/: settings.py  test_collector.py  test_django.py  test_end_to_end.py  test_instrument.py  test_plugin.py  test_reporter.py  test_smoke.py
